immich-ml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ml
  labels:
    app: immich-ml
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: immich-ml.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-ml
                port:
                  number: 3003
  tls:
    - hosts:
        - immich-ml.services.atlantishq.de
      secretName: immich-ml-tls
